fixed minor display issue where tags would overflow on mobile. Also fixed background not displaying, which I had forgotten about earlier. also also, formatted the tags in the individual project to display colors propperly.
fixed minor display issue where tags would overflow on mobile. Also fixed background not displaying, which I had forgotten about earlier. also also, formatted the tags in the individual project to display colors propperly.

--- a/Styles/individualProject.css
+++ b/Styles/individualProject.css
@@ -144,4 +144,15 @@
     #project-link {
         margin-left: 0;
     }
+
+    .project-page{
+        margin:0.25rem;
+        padding: 0;
+    }
+
+    .readme-container{
+        margin:0;
+        padding:1rem;
+        width: 90%;
+    }
 }
