--- a/Styles/master.css
+++ b/Styles/master.css
@@ -1,6 +1,8 @@
 body{
     font-family: Arial, sans-serif;
-    background: linear-gradient(to bottom-right, #f0f0f0, #000000);
+    background: linear-gradient(to bottom, #f0f0f0, #000000);
+    background-repeat: no-repeat;
+    min-height: 100vh;
     margin: 0;
     padding: 2rem 4rem;
 
